# quiz-service-backend

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
attempters/: admin.py  apps.py  middlewares.py  models.py  serializers.py  services.py  urls.py  views.py
attempters/migrations/: 0001_initial.py  0002_attempter_user.py  0003_alter_attempter_user.py
attempters/tests/: setup.py  test_middlewares.py  test_models.py  test_serializers.py  test_views.py
attempts/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
attempts/migrations/: 0001_initial.py  0002_attemptresult_correct_answers_and_more.py  0003_alter_attemptquestion_unique_together.py
backend/: exceptions.py  permissions.py  settings.py  urls.py
backend/logging/: filters.py  formatters.py
backend/middleware/: request_log.py
clients/: admin.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py
customjwt/: apps.py  authentication.py  backends.py  serializers.py  urls.py  views.py
questions/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
questions/migrations/: 0001_initial.py  0002_rename_quess_type_question_guess_type.py  (+8 more)
quizzes/: admin.py  common_serializers.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
results/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
tests/: setup.py
users/: serializers.py  urls.py  views.py
variants/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
(+18 files in other folders)
